@@ -55,10 +55,6 @@ This option only works when plugins provide a UI that is usable via the non-embe
 Print trace messages from plugin
 
 .TP
-\fB\-u UUID\fR
-UUID for Jack session restoration.
-
-.TP
 \fB\-x\fR
 Use only exact Jack client name, and exit if it is taken
 
