@@ -44,10 +44,6 @@ Print control output changes to stdout.
 \fB\-t\fR, \fB\-\-trace\fR
 Print trace messages from plugin.
 
-.TP
-\fB\-u UUID\fR, \fB\-\-uuid UUID\fR
-UUID for Jack session restoration.
-
 .SH "SEE ALSO"
 .BR jalv(1),
 .BR jalv.gtkmm(1),
