@@ -2,9 +2,10 @@ jalv (1.6.5) unstable;
 
   * Add a command line argument to select a specific UI
   * Explicitly support lv2:inPlaceBroken
+  * Remove Jack session support
   * Support port events for ui:showInterface UIs
 
- -- David Robillard <d@drobilla.net>  Sun, 11 Oct 2020 10:16:00 +0000
+ -- David Robillard <d@drobilla.net>  Mon, 14 Dec 2020 14:39:31 +0000
 
 jalv (1.6.4) stable;
 
